# ckanext-danubius_theme

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/danubius_theme/: plugin.py
ckanext/danubius_theme/assets/: danubius_theme.css  script.js  webassets.yml
ckanext/danubius_theme/templates/: base.html  footer.html  header.html
ckanext/danubius_theme/templates/home/: layout1.html
ckanext/danubius_theme/templates/home/snippets/: promoted.html
ckanext/danubius_theme/templates/package/: search.html
ckanext/danubius_theme/templates/snippets/: danubius_theme_most_popular_groups.html  danubius_theme_most_popular_orgs.html  example_theme_most_popular_groups.html
ckanext/danubius_theme/tests/: test_plugin.py
