[metadata]
name = ckanext-danubius_theme
version = 0.0.1
description = A theme for DANUBIUS-RI data portal demonstrator based on the open-source database management system CKAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gabipana7/ckanext-danubius_theme
author = gabipana
author_email = gabipana@localhost
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN danubius theme

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             danubius_theme = ckanext.danubius_theme.plugin:DanubiusThemePlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/danubius_theme/i18n/ckanext-danubius_theme.pot
width = 80

[init_catalog]
domain = ckanext-danubius_theme
input_file = ckanext/danubius_theme/i18n/ckanext-danubius_theme.pot
output_dir = ckanext/danubius_theme/i18n

[update_catalog]
domain = ckanext-danubius_theme
input_file = ckanext/danubius_theme/i18n/ckanext-danubius_theme.pot
output_dir = ckanext/danubius_theme/i18n
previous = true

[compile_catalog]
domain = ckanext-danubius_theme
directory = ckanext/danubius_theme/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
